[gd_scene load_steps=6 format=3 uid="uid://bwhb637c72vsf"]

[ext_resource type="Script" uid="uid://8ewix5rx3n3a" path="res://Scripts/multiplayer_scene.gd" id="1_d7yg1"]
[ext_resource type="Script" uid="uid://bepharh30l5l" path="res://Scripts/server_browser.gd" id="2_63pef"]
[ext_resource type="PackedScene" uid="uid://kxnmtxq4g8rl" path="res://Scenes/GUI/server_info.tscn" id="3_6qf0b"]
[ext_resource type="PackedScene" uid="uid://cot0xf2bb73o4" path="res://Scenes/GUI/lobby.tscn" id="4_amogh"]
[ext_resource type="PackedScene" uid="uid://6vtv2cc6amk" path="res://Scenes/GUI/text_chat.tscn" id="5_kro1a"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 1.0
offset_right = 3.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d7yg1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 408.0
offset_top = 33.0
offset_right = 920.0
offset_bottom = 73.0
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Name:"

[node name="LineEdit" type="LineEdit" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
placeholder_text = "Name"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 931.0
offset_top = 33.0
offset_right = 1241.0
offset_bottom = 73.0
theme_override_constants/separation = 10

[node name="Host" type="Button" parent="HBoxContainer2"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
text = "Host"

[node name="Join" type="Button" parent="HBoxContainer2"]
visible = false
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
text = "Join"

[node name="ServerBrowser" type="Control" parent="."]
anchors_preset = 0
offset_left = 64.0
offset_top = 133.0
offset_right = 64.0
offset_bottom = 142.0
script = ExtResource("2_63pef")
serverInfo = ExtResource("3_6qf0b")

[node name="BroadcastTimer" type="Timer" parent="ServerBrowser"]

[node name="Label" type="Label" parent="ServerBrowser"]
layout_mode = 0
offset_left = 737.0
offset_top = -128.0
offset_right = 896.0
offset_bottom = -105.0
text = "Bound to listen port:"

[node name="Panel" type="Panel" parent="ServerBrowser"]
layout_mode = 0
offset_left = 348.0
offset_top = -46.0
offset_right = 960.0
offset_bottom = 416.0

[node name="ServerInfo2" type="HBoxContainer" parent="ServerBrowser/Panel"]
layout_mode = 2
offset_top = 2.0
offset_right = 609.0
offset_bottom = 30.0

[node name="Name" type="Label" parent="ServerBrowser/Panel/ServerInfo2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Name"

[node name="IP" type="Label" parent="ServerBrowser/Panel/ServerInfo2"]
layout_mode = 2
size_flags_horizontal = 3
text = "IP Address"

[node name="PlayerCount" type="Label" parent="ServerBrowser/Panel/ServerInfo2"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Player"

[node name="Join" type="Label" parent="ServerBrowser/Panel/ServerInfo2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ServerBrowser/Panel"]
layout_mode = 0
offset_left = 1.0
offset_top = 27.0
offset_right = 610.0
offset_bottom = 462.0

[node name="LANButton" type="Button" parent="."]
layout_mode = 0
offset_left = 55.0
offset_top = 463.0
offset_right = 241.0
offset_bottom = 516.0
theme_override_font_sizes/font_size = 28
text = "Back"

[node name="LobbyControl" type="Control" parent="."]
anchors_preset = 0
offset_left = 402.0
offset_top = 582.0
offset_right = 1150.0
offset_bottom = 651.0

[node name="LobbyScene" type="ColorRect" parent="LobbyControl"]
layout_mode = 0
offset_left = -399.0
offset_top = -581.0
offset_right = 748.0
offset_bottom = 67.0
color = Color(0, 0, 0, 0.870588)

[node name="Lobby" parent="LobbyControl/LobbyScene" instance=ExtResource("4_amogh")]
layout_mode = 1
offset_left = 399.0
offset_top = 193.0
offset_right = -426.0
offset_bottom = -197.0

[node name="TextChat" parent="LobbyControl/LobbyScene" instance=ExtResource("5_kro1a")]
layout_mode = 1
offset_left = 843.0
offset_top = 353.0
offset_right = -34.0
offset_bottom = -116.0

[node name="BackToLANBrowser" type="Button" parent="LobbyControl/LobbyScene"]
layout_mode = 0
offset_left = 88.0
offset_top = 305.0
offset_right = 281.0
offset_bottom = 357.0
theme_override_font_sizes/font_size = 24
text = "BACK"

[node name="Start" type="Button" parent="LobbyControl/LobbyScene"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
offset_left = 88.0
offset_top = 382.0
offset_right = 280.0
offset_bottom = 435.0
theme_override_font_sizes/font_size = 24
text = "Start"

[connection signal="button_down" from="HBoxContainer2/Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="HBoxContainer2/Join" to="." method="_on_join_button_down"]
[connection signal="timeout" from="ServerBrowser/BroadcastTimer" to="ServerBrowser" method="_on_broadcast_timer_timeout"]
[connection signal="button_down" from="LANButton" to="." method="_on_lan_button_button_down"]
[connection signal="button_down" from="LobbyControl/LobbyScene/BackToLANBrowser" to="." method="_on_back_to_lan_browser_button_down"]
[connection signal="button_down" from="LobbyControl/LobbyScene/Start" to="." method="_on_start_button_down"]
